[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/Overlorder.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/global/global_main.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/zones/backgrounds/textures/bg_light.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/blocks/exit/textures/opened.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/blocks/exit/textures/door.png" type="Texture" id=5]
[ext_resource path="res://scenes/components/zones/backgrounds/textures/bg_black.png" type="Texture" id=6]
[ext_resource path="res://brand.png" type="Texture" id=7]
[ext_resource path="res://scenes/components/common/Control.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_color = Color( 0.811765, 0.847059, 0.862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_color = Color( 0.811765, 0.847059, 0.862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_color = Color( 0.811765, 0.847059, 0.862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_color = Color( 0.811765, 0.847059, 0.862745, 1 )
extra_spacing_top = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_color = Color( 0.811765, 0.847059, 0.862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 200
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Ruler" type="Polygon2D" parent="."]
visible = false
position = Vector2( -33, -112 )
z_index = 1
polygon = PoolVector2Array( 984, 256, 984, 6000, 992, 6000, 992, 256 )

[node name="Menu" type="Node2D" parent="."]
position = Vector2( -1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="BackgroundLight" type="Sprite" parent="Menu"]
position = Vector2( 824, 132 )
scale = Vector2( 1000, 1000 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="BackgroundBlack" type="Sprite" parent="Menu"]
visible = false
position = Vector2( 401, 80 )
scale = Vector2( 40, 15 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="brand" type="Sprite" parent="Menu"]
position = Vector2( 961, 540 )
texture = ExtResource( 7 )

[node name="Camera" type="Camera2D" parent="Menu"]
position = Vector2( 960, 540 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 3.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Title" type="Node2D" parent="Menu"]
visible = false
position = Vector2( 431, 98 )
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Menu/Title"]
margin_left = -8.0
margin_right = 529.0
margin_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
text = "Life Is Not The End"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brand" type="Label" parent="Menu/Title"]
margin_left = -2.0
margin_top = 94.0
margin_right = 526.0
margin_bottom = 156.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
text = "- PixSynt"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Node2D" parent="Menu"]
position = Vector2( 824, 448 )

[node name="Play" type="Button" parent="Menu/Actions"]
margin_left = -2.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Button" parent="Menu/Actions"]
margin_left = 6.0
margin_top = 75.0
margin_right = 138.0
margin_bottom = 140.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Levels"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Menu/Actions"]
margin_left = -9.0
margin_top = 140.0
margin_right = 138.0
margin_bottom = 205.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Options"
flat = true

[node name="Credits" type="Button" parent="Menu/Actions"]
margin_left = -4.0
margin_top = 205.0
margin_right = 138.0
margin_bottom = 270.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menu/Actions"]
margin_left = 56.0
margin_top = 270.0
margin_right = 138.0
margin_bottom = 335.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tardis" type="Node2D" parent="Menu"]
visible = false
position = Vector2( 1408, 760 )
scale = Vector2( 20, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="opened" type="Sprite" parent="Menu/Tardis"]
texture = ExtResource( 4 )

[node name="door" type="Sprite" parent="Menu/Tardis"]
texture = ExtResource( 5 )

[node name="Levels" type="Node2D" parent="."]
position = Vector2( 0, 1500 )

[node name="BackgroundBlack" type="Sprite" parent="Levels"]
position = Vector2( 401, 80 )
scale = Vector2( 40, 15 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera2D" parent="Levels"]
position = Vector2( 960, 540 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Return" type="Button" parent="Levels"]
margin_left = 825.0
margin_top = 191.0
margin_right = 962.0
margin_bottom = 256.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="."]
position = Vector2( 1, 3000 )

[node name="BackgroundBlack" type="Sprite" parent="Options"]
position = Vector2( 401, 80 )
scale = Vector2( 40, 15 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera2D" parent="Options"]
position = Vector2( 960, 540 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Return" type="Button" parent="Options"]
margin_left = 825.0
margin_top = 191.0
margin_right = 962.0
margin_bottom = 256.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Options"]
margin_left = 709.0
margin_top = 416.0
margin_right = 839.0
margin_bottom = 475.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
text = "Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Button" parent="Options"]
margin_left = 861.0
margin_top = 416.0
margin_right = 961.0
margin_bottom = 477.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "75"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="Options" instance=ExtResource( 8 )]
position = Vector2( 709, 527 )
z_index = 1
z_as_relative = false

[node name="Credits" type="Node2D" parent="."]
position = Vector2( 0, 4500 )

[node name="BackgroundBlack" type="Sprite" parent="Credits"]
position = Vector2( 401, 80 )
scale = Vector2( 40, 15 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera2D" parent="Credits"]
position = Vector2( 960, 540 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Return" type="Button" parent="Credits"]
margin_left = 825.0
margin_top = 191.0
margin_right = 962.0
margin_bottom = 256.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creator" type="Label" parent="Credits"]
margin_left = 805.0
margin_top = 363.0
margin_right = 955.0
margin_bottom = 422.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
text = "Creator "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="LinkButton" parent="Credits"]
margin_left = 605.0
margin_top = 422.0
margin_right = 955.0
margin_bottom = 481.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
text = "Lebedev Vyacheslav"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thanks" type="Label" parent="Credits"]
margin_left = 832.0
margin_top = 538.0
margin_right = 957.0
margin_bottom = 597.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
text = "Thanks"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="People" type="Label" parent="Credits"]
margin_left = 672.0
margin_top = 597.0
margin_right = 957.0
margin_bottom = 656.0
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
text = "Dmitry Shchadin"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Credits"]
margin_left = 721.0
margin_top = 709.0
margin_right = 956.0
margin_bottom = 768.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.12549, 0.152941, 1 )
text = "Credits links"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotLink" type="LinkButton" parent="Credits"]
margin_left = 664.0
margin_top = 765.0
margin_right = 764.0
margin_bottom = 824.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
text = "Godot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbmientsLink" type="LinkButton" parent="Credits"]
margin_left = 664.0
margin_top = 824.0
margin_right = 829.0
margin_bottom = 883.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
text = "Abmients"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsLink" type="LinkButton" parent="Credits"]
margin_left = 817.0
margin_top = 765.0
margin_right = 957.0
margin_bottom = 824.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
text = "Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontLink" type="LinkButton" parent="Credits"]
margin_left = 872.0
margin_top = 824.0
margin_right = 957.0
margin_bottom = 883.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.847059, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.847059, 0.862745, 1 )
shortcut_in_tooltip = false
text = "Font"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MENU" type="Label" parent="."]
margin_left = -966.0
margin_top = 438.0
margin_right = -728.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 6 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEVELS" type="Label" parent="."]
margin_left = -974.0
margin_top = 1878.0
margin_right = -674.0
margin_bottom = 2025.0
custom_fonts/font = SubResource( 6 )
text = "LEVELS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPTIONS" type="Label" parent="."]
margin_left = -942.0
margin_top = 3326.0
margin_right = -642.0
margin_bottom = 3473.0
custom_fonts/font = SubResource( 6 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CREDITS" type="Label" parent="."]
margin_left = -918.0
margin_top = 4894.0
margin_right = -580.0
margin_bottom = 5041.0
custom_fonts/font = SubResource( 6 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/Actions/Play" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Actions/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="Menu/Actions/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/Actions/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu/Actions/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Levels/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Options/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Options/Volume" to="." method="_on_Volume_pressed"]
[connection signal="pressed" from="Credits/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Credits/Author" to="." method="_on_Author_pressed"]
[connection signal="pressed" from="Credits/GodotLink" to="." method="_on_GodotLink_pressed"]
[connection signal="pressed" from="Credits/AbmientsLink" to="." method="_on_AbmientsLink_pressed"]
[connection signal="pressed" from="Credits/EffectsLink" to="." method="_on_EffectsLink_pressed"]
[connection signal="pressed" from="Credits/FontLink" to="." method="_on_FontLink_pressed"]
